--- a/dashboard/src/locales/vt.json
+++ b/dashboard/src/locales/vt.json
@@ -1,7 +1,7 @@
 {
   "translation": "english",
-  "create": "Vytvorit",
-  "Create": "Thành lập",
+  "create": "Tạo lập",
+  "Create": "Tạo lập",
   "credit": "Tín dụng",
   "Credit": "Tín dụng",
   "gallery": "Thư viện",
