--- a/dashboard/src/locales/vt.json
+++ b/dashboard/src/locales/vt.json
@@ -1,5 +1,5 @@
 {
-  "translation": "english",
+  "translation": "vietnamese",
   "create": "Tạo lập",
   "Create": "Tạo lập",
   "credit": "Tín dụng",
